# icdrbench

./: .gitignore  .gitmodules  README.md  domain.md  pyproject.toml  research_plan.md  yaml2prompt.py
configs/: corpora.yaml  domains.yaml  recipe_prompting.yaml  workflow_prompting.yaml
data-juicer/: .gitignore  .secrets.baseline  Dockerfile  Dockerfile.embodied  README.md  README_ZH.md  app.py  pyproject.toml  service.py
data-juicer/.pre-commit-hooks/: build_op_doc.py
data-juicer/data_juicer/: __init__.py
data-juicer/docs/: Operators.md
data-juicer/tools/: process_data.py
docs/: domain_download_guide.md  external_benchmark_status.md  paper_draft.md
scripts/: build_engineering_atomic_subset.sh  build_engineering_main_subset.sh  build_engineering_order_subset.sh  eval_benchmark_all_tracks.sh  infer_benchmark_tracks.sh  run_atomic_model_suite.sh  run_prompt_pipeline_all_tracks.sh  run_recipe_pipeline.sh  score_benchmark_tracks.sh  serve_vllm_openai.sh  start_vllm.sh  stop_vllm.sh
scripts/evaluation/: infer_gemini_3_1_pro_preview.sh  infer_gemma4.sh  infer_gpt_5_4.sh  infer_kimi_k2_5.sh  infer_qwen3_5_0_8b.sh  infer_qwen3_5_2b.sh  infer_qwen3_5_4b.sh  infer_qwen3_5_9b.sh  infer_qwen3_6_plus.sh  score_gemini_3_1_pro_preview.sh  score_gemma4.sh  score_gpt_5_4.sh  score_qwen3_5_0_8b.sh  score_qwen3_5_2b.sh  score_qwen3_5_4b.sh  score_qwen3_5_9b.sh  score_qwen3_6_plus.sh
scripts/model_serve/: start_vllm_qwen3_5_0_8b.sh  start_vllm_qwen3_5_2b.sh  start_vllm_qwen3_5_4b.sh  start_vllm_qwen3_5_9b.sh
scripts/prepare_data/: convert_raw_corpus.py  download_sources.py  (+8 more)
(+379 files in other folders)
