[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdrbench"
version = "0.1.0"
description = "Benchmark construction utilities for CDR-Bench"
requires-python = ">=3.9"
dependencies = [
  "requests",
  "datasets",
  "pandas",
  "pyyaml",
  "regex",
  "selectolax",
  "beautifulsoup4",
  "jsonlines",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
